[tr064] Enhancements, code improvements and fixes
Signed-off-by: Jan N. Klug <github@klug.nrw>